# haskell-hangman

./: README.md  hangman.cabal
src/: Gallows.hs  Game.hs  Main.hs  Puzzle.hs  WordList.hs
