name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/harmenjanssen/haskell-hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Harmen Janssen
maintainer:          harmen@whatstyle.net
copyright:           2018 Harmen Janssen
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
